2010-08-11  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Updates for 8.6b2 release.

2010-08-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* license.terms: fix DFARs note for number-adjusted rights clause

2010-08-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/button.tcl (::tk::CheckEnter): use uplevel set instead
	of set :: to work with other var resolvers (itcl). [AS Bug#87409]

2010-07-19  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkImgGIF.c (StringWriteGIF): Added ability to write a GIF to
	a string (as a byte array, of course) following comments on c.l.t by
	Aric Bills. Also improved readability of some of the function and
	field names in this file.

2010-07-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkDecls.h: [Tcl Bug 3029891]: Functions that don't belong in
	the stub table (Tk part, not really removed from the stub table, just
	disabled)
	* generic/tkMain.c:  [Bug 3027438]: Tk_Main calls Tcl_CreateInterp
	* generic/tk.h:      before Tcl_FindExecutable

2010-07-06  Andreas Kupries  <andreask@activestate.com>

	* doc/text.n: Fixed minor typo in the description of 'text delete', as
	reported by <eee@users.sf.net> on the chat.

2010-07-01  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/rules.vc:  [Bug 3020677]: wish can't link reg1.2

2010-06-22  Anton Kovalenko  <a_kovalenko@users.sf.net>

	* generic/tkPlace.c: [Patch 3019624]: modify "place" command, making
	it get main window through ClientData (like grid or pack do), instead
	of calling Tk_MainWindow(interp).
	* generic/tkWindow.c: modify "place" entry in commands[], turn on
	passMainWindow flag.

2010-06-22  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/ttk/ttkGenStubs.tcl: [Bug 3019363]: "make genstubs" failure
	* generic/ttk/ttkDecls.h:      (regenerated)
	* generic/ttk/ttkTheme.c:      Unnecessary type cast

2010-06-21  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkInt.decls: [Patch 2999889]: TkCopyAndGlobalEval obsolete
	* generic/tkIntDecls.h
	* generic/tkBind.c