@@ -1,3 +1,11 @@
+2010-08-11  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* unix/configure: regen with ac-2.59
+	* unix/configure.in, unix/Makefile.in:
+	* unix/tcl.m4 (AIX): remove the need for ldAIX, replace with
+	-bexpall/-brtl.  Remove TK_EXP_FILE (export file) and other
+	baggage that went with it.  Remove pre-4 AIX build support.
+
 2010-08-11  Don Porter  <dgp@users.sourceforge.net>
 
 	* changes:	Updates for 8.6b2 release.
